# webhookapp

./: .coverage  .flake8  .gitignore  ANTI_BOT_SETUP.md  app.py  check_indexes.py  check_logs.py  claude.md  config.py  confirm_user.py  create_test_user.py  db_check.py  debug_recaptcha.py  deploy.sh  fix_automation_ids.py  generate_jwt.py  pyproject.toml  pytest.ini  pyvenv.cfg  requirements.txt  run.py  test_twrr_fix.py  tree.txt
.claude/: settings.json
Coinbase-API-Docs/: Coinbase Accounts API reference.txt  Coinbase App OAuth2 Integration.txt  Coinbase Portfolios API Reference.txt
app/: __init__.py  app.py
app/exchanges/: __init__.py  base_adapter.py  ccxt_base_adapter.py  ccxt_coinbase_adapter.py  ccxt_cryptocom_adapter.py  coinbase_adapter.py  init_exchanges.py  precision.py  registry.py
app/forms/: __init__.py  api_key_form.py  custom_2fa_form.py  custom_login_form.py  custom_register_form.py  portfolio_api_key_form.py
app/middleware/: __init__.py  db_connection.py
app/models/: __init__.py  account_cache.py  automation.py  exchange_credentials.py  notification.py  oauth_credentials.py  portfolio.py  trading.py  user.py  webhook.py
app/routes/: .gitignore  (+17 more)
migrations/: env.py  portfolio_integration.py
scripts/: __init__.py  create_admin.py  create_admin_user.py  create_custom_admin.py  generate_chart_test_data.py  generate_encryption_key.py  generate_jwt.py  monitor_bot_traffic.py  script_utils.py  seed_demo_strategy.py  simulate_strategy6_history.py
tests/: conftest.py  test_webhook.py
webhookapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+147 files in other folders)
